started box model

--- a/First-Project.html
+++ b/First-Project.html
@@ -8,8 +8,18 @@
     <h1>Hi there stranger!</h1>
     <h2>Meet my first Moringa brainchild</h2>
     <h3>It's a first so don't judge</h3>
-    <p>Here are the projects i've worked or atleast tried to work on</body>
+    <div class="box-one">
+      <p>Here are the projects i've worked or atleast tried to work on</body>
+    </div>
+
+
+    <div class="box-two">
       <ul>
-        <li></li>
+        <li><a href="https://github.com/SHABA-YAGA/hello-world2">creating my first html document</a></li>
+        <li><a href="https://github.com/SHABA-YAGA/delani_studio_site">training on how to fork other people's projects</a></li>
+        <li><a href="https://github.com/SHABA-YAGA/cookie-recipe">Practicing on indentation and spacing on a terrible spaced webpage</a></li>
+        <li><a href="https://github.com/SHABA-YAGA/MY-FIRST-WEBPAGE">Building my first webpage</a></li>
       </ul>
+    </div>
+
   </body>
